--- a/sass/curls.scss
+++ b/sass/curls.scss
@@ -20,10 +20,10 @@
 /** Flexible containers (.flex) */
 @import 'flexibility/index';
 
-/** Grid layout (.grid) */
+/** Grid layout (.grid, .col, .row) */
 @import 'grid/index';
 
-/** Multi-column layout */
+/** Multi-column layout (.cols) */
 @import 'columns/index';
 
 /** UI Components */
