--- a/sass/ui/form/_index.scss
+++ b/sass/ui/form/_index.scss
@@ -1,2 +1,8 @@
 @import 'variables';
 @import 'layout';
+
+/** Checkbox (.checkbox) */
+@import 'checkbox/index';
+
+/** Toggler (.toggler) */
+@import 'toggler/index';
