--- a/sass/ui/form/_variables.scss
+++ b/sass/ui/form/_variables.scss
@@ -11,7 +11,7 @@ $input-text-padding-right: golden($input-text-padding-top) !default;
 $input-text-padding-bottom: $input-text-padding-top !default;
 $input-text-padding-left: $input-text-padding-right !default;
 $input-text-background: $body-background !default;
-$input-text-border: 1px solid #ccc !default;
+$input-text-border: 1px solid #dbdbdb !default;
 $input-text-width: auto;
 
 $textarea-font-size: 16px !default;
