--- a/sass/ui/nav/dropdown/_variables.scss
+++ b/sass/ui/nav/dropdown/_variables.scss
@@ -61,7 +61,7 @@ $dropdown-toggler-hover-border-radius: 3px;
 
 $dropdown-toggler-active-background: lighten($dropdown-toggler-color, 55%) !default;
 $dropdown-toggler-active-color: $dropdown-toggler-color !default;
-$dropdown-toggler-active-border-color: #ccc !default;
+$dropdown-toggler-active-border-color: #dbdbdb !default;
 $dropdown-toggler-active-border-style: solid !default;
 $dropdown-toggler-active-border-width: 1px !default;
 $dropdown-toggler-active-border-radius: 3px !default;
