--- a/sass/ui/nav/paginate/_variables.scss
+++ b/sass/ui/nav/paginate/_variables.scss
@@ -9,10 +9,10 @@ $paginate-link-hover-color: $link-hover-color !default;
 $paginate-link-class: unquote("#{unquote(".")}#{$paginate-name}__link") !default;
 $paginate-link-border-width: 1px !default;
 $paginate-link-border-style: solid !default;
-$paginate-link-border-color: #ccc !default;
+$paginate-link-border-color: #dbdbdb !default;
 $paginate-link-background: transparent !default;
 $paginate-link-border-radius: 5px !default;
-$paginate-link-padding: round($grid-desktop-gutter / 2) rgolden($grid-desktop-gutter) !default;
+$paginate-link-padding: round($grid-gutter-l / 2) round($grid-gutter-l) !default;
 $paginate-link-color: $link-color !default;
 $paginate-link-hover-color: $link-hover-color !default;
 $paginate-link-active-color: $link-active-color !default;
