--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -183,3 +183,62 @@ $retina-suffix: '@2x';
   filter: url(blur.svg#blur);
   filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='20');
 }
+
+
+@mixin _group($size, $pre, $prop) {
+  $stripped-size: strip-units($size);
+  %#{$pre}--t#{$stripped-size} {
+    #{$prop}-top: $size !important;
+  }
+  .#{$pre}--t#{$stripped-size} {
+    @extend %#{$pre}--t#{$stripped-size};
+  }
+  %#{$pre}--b#{$stripped-size} {
+    #{$prop}-bottom: $size !important;
+  }
+  .#{$pre}--b#{$stripped-size} {
+    @extend %#{$pre}--b#{$stripped-size};
+  }
+  %#{$pre}--y#{$stripped-size} {
+    @extend %#{$pre}--t#{$stripped-size};
+    @extend %#{$pre}--b#{$stripped-size};
+  }
+  .#{$pre}--y#{$stripped-size} {
+    @extend %#{$pre}--y#{$stripped-size};
+  }
+  %#{$pre}--r#{$stripped-size} {
+    #{$prop}-right: $size !important;
+  }
+  .#{$pre}--r#{$stripped-size} {
+    @extend %#{$pre}--r#{$stripped-size};
+  }
+  %#{$pre}--l#{$stripped-size} {
+    #{$prop}-left: $size !important;
+  }
+  .#{$pre}--l#{$stripped-size} {
+    @extend %#{$pre}--l#{$stripped-size};
+  }
+  %#{$pre}--x#{$stripped-size} {
+    @extend %#{$pre}--r#{$stripped-size};
+    @extend %#{$pre}--l#{$stripped-size};
+  }
+  .#{$pre}--x#{$stripped-size} {
+    @extend %#{$pre}--x#{$stripped-size};
+  }
+  %#{$pre}--#{$stripped-size} {
+    #{$prop}: $size !important;
+  }
+  .#{$pre}--#{$stripped-size} {
+    @extend %#{$pre}--#{$stripped-size};
+  }
+}
+
+
+@mixin margin-group($size, $prefix: 'm') {
+  @include _group($size, $prefix, 'margin')
+}
+
+
+@mixin padding-group($size, $prefix: 'p') {
+  @include _group($size, $prefix, 'padding')
+}
