--- a/sass/grid/_mixins.scss
+++ b/sass/grid/_mixins.scss
@@ -1,16 +1,20 @@
-@mixin grid($cols, $gutter-size: 0, $name-prefix: 'x', $multiple: 1) {
+@mixin grid($cols, $gutter-size: 0, $name-prefix: 'x', $name-ext: null,
+            $multiple: 1) {
   @for $x from 1 through $cols {
-    @include grid-column($x, $cols, $gutter-size, $name-prefix, $multiple);
+    @include grid-column($x, $cols, $gutter-size, $name-prefix, $name-ext,
+                         $multiple);
   }
 }
 
 
-@mixin grid-column($x, $cols, $gutter-size: 0, $name-prefix: 'x', $multiple: 1) {
-  $ext: "";
-  @if $cols != $grid-columns {
-    $ext: "--#{$cols}";
+@mixin grid-column($x, $cols, $gutter-size: 0, $name-prefix: 'x',
+                   $name-ext: null, $multiple: 1) {
+  @if $name-ext {
+    $name-ext: "--#{$name-ext}";
+  } @else {
+    $name-ext: '';
   }
-  .#{$name-prefix}#{$x}#{$ext} {
+  .#{$name-prefix}#{$x}#{$name-ext} {
     @include make-grid-column($x, $cols, $gutter-size, $multiple);
   }
 }
@@ -26,62 +30,4 @@
   // max-width: $width;
   padding: 0 $gutter-size / 2;
   @include flex-basis($width);
-}
-
-@mixin _group($size, $pre, $prop) {
-  $stripped-size: strip-units($size);
-  %#{$pre}--t#{$stripped-size} {
-    #{$prop}-top: $size !important;
-  }
-  .#{$pre}--t#{$stripped-size} {
-    @extend %#{$pre}--t#{$stripped-size};
-  }
-  %#{$pre}--b#{$stripped-size} {
-    #{$prop}-bottom: $size !important;
-  }
-  .#{$pre}--b#{$stripped-size} {
-    @extend %#{$pre}--b#{$stripped-size};
-  }
-  %#{$pre}--y#{$stripped-size} {
-    @extend %#{$pre}--t#{$stripped-size};
-    @extend %#{$pre}--b#{$stripped-size};
-  }
-  .#{$pre}--y#{$stripped-size} {
-    @extend %#{$pre}--y#{$stripped-size};
-  }
-  %#{$pre}--r#{$stripped-size} {
-    #{$prop}-right: $size !important;
-  }
-  .#{$pre}--r#{$stripped-size} {
-    @extend %#{$pre}--r#{$stripped-size};
-  }
-  %#{$pre}--l#{$stripped-size} {
-    #{$prop}-left: $size !important;
-  }
-  .#{$pre}--l#{$stripped-size} {
-    @extend %#{$pre}--l#{$stripped-size};
-  }
-  %#{$pre}--x#{$stripped-size} {
-    @extend %#{$pre}--r#{$stripped-size};
-    @extend %#{$pre}--l#{$stripped-size};
-  }
-  .#{$pre}--x#{$stripped-size} {
-    @extend %#{$pre}--x#{$stripped-size};
-  }
-  %#{$pre}--#{$stripped-size} {
-    #{$prop}: $size !important;
-  }
-  .#{$pre}--#{$stripped-size} {
-    @extend %#{$pre}--#{$stripped-size};
-  }
-}
-
-
-@mixin margin-group($size, $prefix: 'm') {
-  @include _group($size, $prefix, 'margin')
-}
-
-
-@mixin padding-group($size, $prefix: 'p') {
-  @include _group($size, $prefix, 'padding')
 }
