--- a/sass/grid/_variables.scss
+++ b/sass/grid/_variables.scss
@@ -1,20 +1,38 @@
-$grid-columns: 12 !default;
-$grid-phone-columns: 4 !default;
-$grid-tablet-columns: 8 !default;
 $grid-name: 'grid' !default;
 $grid-class: unquote("#{unquote(".")}#{$grid-name}") !default;
+
 $grid-row-name: row !default;
 $grid-row-class: unquote("#{unquote(".")}#{$grid-row-name}") !default;
-$grid-phone-gutter: 8px !default;
-$grid-tablet-gutter: 16px !default;
-$grid-desktop-gutter: 16px !default;
-$float-grid-row-name: fl-row !default;
-$float-grid-row-class: unquote("#{unquote(".")}#{$float-grid-row-name}") !default;
+
 $grid-col-name: col !default;
 $grid-col-class: unquote("#{unquote(".")}#{$grid-col-name}") !default;
-$float-grid-col-name: fl-col !default;
-$float-grid-col-class: unquote("#{unquote(".")}#{$float-grid-col-name}") !default;
+
 $grid-body-name: #{$grid-name}__body !default;
 $grid-body-class: unquote("#{unquote(".")}#{$grid-body-name}") !default;
+
+
+$grid-gutter-xs: 8px !default;
+$grid-gutter-s: 8px !default;
+$grid-gutter-m: 16px !default;
+$grid-gutter-l: 16px !default;
+$grid-gutter-xl: 24px !default;
+
+$grid-columns-xs: 4 !default;
+$grid-columns-s: 4 !default;
+$grid-columns-m: 8 !default;
+$grid-columns-l: 12 !default;
+$grid-columns-xl: 16 !default;
+
+$grid-breakpoint-xs: $phone-s !default;
+$grid-breakpoint-s: $phone-max !default;
+$grid-breakpoint-m: $tablet-max !default;
+$grid-breakpoint-l: $desktop !default;
+$grid-breakpoint-xl: $desktop-l !default;
+
+
+$float-grid-row-name: fl-row !default;
+$float-grid-row-class: unquote("#{unquote(".")}#{$float-grid-row-name}") !default;
+$float-grid-col-name: fl-col !default;
+$float-grid-col-class: unquote("#{unquote(".")}#{$float-grid-col-name}") !default;
 $float-grid-body-name: #{$grid-name}__fl-body !default;
 $float-grid-body-class: unquote("#{unquote(".")}#{$float-grid-body-name}") !default;
