--- a/sass/type/_variables.scss
+++ b/sass/type/_variables.scss
@@ -19,7 +19,7 @@ $heading-line-height: 1.1 !default;
 $paragraph-padding: 0 !default;
 $paragraph-margin: 0 0 1.2em !default;
 
-$paragraph-font: "Helvetica Neue", Arial, sans-serif !default;
+$paragraph-font: "Roboto", "Helvetica Neue", Arial, sans-serif !default;
 $paragraph-font-size: 16px !default;
 $paragraph-line-height: 1.38em !default;
 $paragraph-letter-spacing: 0.62px !default;
